# dsa-c

./: .gitignore  CMakeLists.txt  README.md
include/: _leetcode.h  array.h  circular_queue.h  constants.h  dynamic_hash_table.h  list_node.h  sort.h
include/algorithms/: compression.h  search.h
include/data_structures/: binary_search_tree.h  binary_tree.h  doubly_linked_list.h  hash_table.h  matrix.h  regular_queue.h  singly_linked_list.h  stack.h
include/leetcode/: leetcode.h
src/: main.c
src/_utils/: constants.c
src/algorithms/: compression.c  search.c  sort.c
src/data_structures/: array.c  binary_search_tree.c  binary_tree.c  circular_queue.c  doubly_linked_list.c  dynamic_hash_table.c  hash_table.c  matrix.c  regular_queue.c  singly_linked_list.c  stack.c
src/leetcode/020_valid_parentheses/: solution.c  task.md
src/leetcode/067_add_binary/: solution.c  task.md
src/leetcode/1021_remove_outermost_parentheses/: solution.c  task.md
src/leetcode/1051_height_checker/: solution.c  task.md
src/leetcode/108_convert_sorted_array_to_binary_search_tree/: solution.c  task.md
src/leetcode/1290_convert_binary_number_in_a_linked_list_to_integer/: solution.c  task.md
src/leetcode/1436_destination_city/: solution.c  task.md
src/leetcode/169_majority_element/: solution.c  task.md
src/leetcode/1700_number_of_students_unable_to_eat_lunch/: solution.c  task.md
src/leetcode/1797_design_authentication_manager/: solution.c  task.md
src/leetcode/1952_three_divisors/: solution.c  task.md
src/leetcode/206_reverse_linked_list/: solution.c  task.md
src/leetcode/217_contains_duplicate/: solution.c  task.md
src/leetcode/21_merge_two_sorted_lists/: solution.c  task.md
src/leetcode/234_palindrome_linked_list/: solution.c  task.md
src/leetcode/404_sum_of_left_leaves/: solution.c  task.md
src/leetcode/500_keyboard_row/: solution.c  task.md
src/leetcode/622_design_circular_queue/: solution.c  task.md
src/leetcode/682_baseball_game/: solution.c  task.md
src/leetcode/700_search_in_a_binary_search_tree/: solution.c  task.md
src/leetcode/706_design_hashmap/: solution.c  task.md
src/leetcode/88_merge_sorted_array/: solution.c  task.md
src/leetcode/905_sort_array_by_parity/: solution.c  task.md
src/leetcode/912_sort_an_array/: solution.c  task.md
src/leetcode/933_number_of_recent_calls/: solution.c  task.md
src/leetcode/binary_tree_traversals/: inorder.md  postorder.md  preorder.md  solution.c
